# loopfleet

./: .gitignore  Cargo.toml  DESIGN.md  PRD.md  PRODUCT.md  README.md  package-lock.json  package.json  progress.txt
.impeccable/: design.json
crates/adapters/: Cargo.toml
crates/adapters/fixtures/: basic_run.jsonl  claude_stream.jsonl  cursor_stream.jsonl  pi_stream.jsonl
crates/adapters/src/: claude.rs  cursor.rs  discovery.rs  lib.rs  pi.rs  stub.rs
crates/adapters/tests/: run_n_loops.rs
crates/core/: Cargo.toml
crates/core/src/: adapter.rs  compare.rs  event.rs  lib.rs  overview.rs  plan.rs  progress.rs  run_loop.rs  supervisor.rs  task_status.rs  timeline.rs
crates/core/tests/: git_boundary.rs
crates/gitx/: Cargo.toml
crates/gitx/src/: actor.rs  diff.rs  lib.rs  merge.rs  shadow.rs  status.rs  worktree.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: lib.rs  profile.sb.tmpl
crates/store/: Cargo.toml
crates/store/src/: event_log.rs  lib.rs  plans.rs  projects.rs  runs.rs  settings.rs
crates/store/src/migrations/: 0001_init.sql  0002_settings.sql
frontend/: index.html  package-lock.json  package.json  progress.txt  vite.config.ts
frontend/src/: App.tsx  commandbar.css  commands.ts  displayText.ts  dock.css  empty.css  events.ts  fuzzy.ts  grid.css  main.tsx  markdown.tsx  palette.css  panels.css  plan.css  prd.css  runview.css  shell.css  status.css  status.ts  tabs.css  textDiff.ts  tokens.css  types.ts
frontend/src/components/: AddProject.tsx  AgentStatusPanel.tsx  AppShell.tsx  CommandBar.tsx  CommandPalette.tsx  CompareView.tsx  DataGrid.tsx  EmptyState.tsx  LiveRunView.tsx  PlanSurface.tsx  PlanTree.tsx  PlanView.tsx  PrdView.tsx  RunDock.tsx  RunSubtabs.tsx  RunTimeline.tsx  SandboxBoundaryPanel.tsx  SandboxOverrides.tsx  SettingsPanel.tsx  TabStrip.tsx  TaskTab.tsx  Toasts.tsx  UseRun.tsx
prds/: agent-cockpit-v1.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
