[package]
name = "loopfleet"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Run looping coding agents against PRD-style plans in sandboxed git worktrees."

[lib]
name = "loopfleet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
time = { version = "0.3", features = ["parsing"] }

loopfleet-core.workspace = true
loopfleet-adapters.workspace = true
loopfleet-sandbox.workspace = true
loopfleet-gitx.workspace = true
loopfleet-store.workspace = true
