[package]
name = "loopfleet-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
loopfleet-core.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["process", "io-util"] }
serde_json.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }
tempfile = "3"
