[package]
name = "loopfleet-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
loopfleet-core.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["process", "io-util"] }
serde.workspace = true
serde_json.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
loopfleet-gitx.workspace = true
loopfleet-sandbox.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tempfile = "3"
