[package]
name = "loopfleet-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
loopfleet-gitx.workspace = true
loopfleet-store.workspace = true
rusqlite.workspace = true
uuid = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
git2.workspace = true
tempfile = "3"
serde_json.workspace = true
