[package]
name = "loopfleet-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
loopfleet-gitx.workspace = true
loopfleet-store.workspace = true
rusqlite.workspace = true
uuid = { workspace = true }
serde = { workspace = true }
async-trait.workspace = true
tokio = { workspace = true, features = ["process", "sync"] }
libc.workspace = true

[dev-dependencies]
loopfleet-sandbox.workspace = true
git2.workspace = true
tempfile = "3"
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "process", "io-util", "time"] }
