[package]
name = "loopfleet-store"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rusqlite.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["rt", "sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = "3"
